# maplab

./: .gitignore
algorithms/loopclosure/descriptor-projection/src/: descriptor-projection.cc  train-projection-matrix.cc
algorithms/map-optimization-legacy/src/: graph-ba-optimizer.cc  landmark-covariance-estimation.cc
algorithms/map-optimization/include/map-optimization/: solver-options.h
applications/rovioli/: CMakeLists.txt  tutorial_cla  tutorial_cla_localization  tutorial_cla_test  tutorial_loomo
applications/rovioli/app/: generate_ncamera_config.cc
applications/rovioli/include/rovioli/: parameters.h
applications/rovioli/src/: parameters.cpp
applications/train_matrix/: CMakeLists.txt  README.md  package.xml
applications/train_matrix/app/: train_matrix-app.cc
applications/train_quantizer/: CMakeLists.txt  README.md  package.xml
applications/train_quantizer/app/: train_quantizer-app.cc
map-structure/localization-summary-map/src/: localization-summary-map-creation.cc
visualization/: show-vio.rviz
