<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>train_matrix</name>
  <version>0.0.0</version>
  <description>
    Train our own projection matrix.
  </description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>aslam_cv_pipeline</depend>
  <depend>cv_bridge</depend>
  <depend>descriptor_projection</depend>
  <depend>feature_tracking</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>localization_summary_map</depend>
  <depend>loop_closure_handler</depend>
  <depend>maplab_common</depend>
  <depend>online_map_builders</depend>
  <depend>rovio</depend>
  <depend>sensors</depend>
  <depend>vi_map</depend>
  <depend>vi_mapping_test_app</depend>
  <depend>vio_common</depend>
  <depend>visualization</depend>
</package>
