<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>train_quantizer</name>
  <version>0.0.0</version>
  <description>
    Train our own projectied quantizer.
  </description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>aslam_cv_cameras</depend>
  <depend>aslam_cv_common</depend>
  <depend>aslam_cv_frames</depend>
  <depend>descriptor_projection</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>matching_based_loopclosure</depend>
  <depend>inverted_multi_index</depend>
  <depend>libnabo</depend>
  <depend>loopclosure_common</depend>
  <depend>maplab_common</depend>
  <depend>posegraph</depend>
  <depend>product_quantization</depend>
  <depend>protobuf_catkin</depend>
  <depend>vi_map</depend>
  <depend>vocabulary_tree</depend>

  <depend>aslam_cv_pipeline</depend>
  <depend>cv_bridge</depend>
  <depend>end_to_end_common</depend>
  <depend>feature_tracking</depend>
  <depend>localization_summary_map</depend>
  <depend>loop_closure_handler</depend>
  <depend>mapping_workflows_plugin</depend>
  <depend>rovio</depend>
  <depend>sensors</depend>
  <depend>vi_mapping_test_app</depend>
  <depend>vio_common</depend>
  <depend>visualization</depend>  
</package>
